# file-ml-library

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: FileMLConfig.cmake.in
src/: File.cpp  fileml.h
tools/tests/: CMakeLists.txt  main.cpp
